# tarko-agent-ui-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: app.py  custom-base.py  fastapi_server.py  simple_usage.py
python/: .gitignore  MANIFEST.in  README.md  publish.sh  pyproject.toml  setup.py
python/agent_sandbox/: __init__.py
python/examples/: fastapi_server.py
scripts/: README.md  auto_release.py  build_assets.py  test_release.py  validate_scripts.py
tarko_agent_ui/: __init__.py
tarko_web_ui/: __init__.py  _static_version.py  cli.py  server.py
tests/: test_build_assets.py  test_core.py  test_fastapi_integration.py
