[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarko-web-ui"
version = "0.1.0"
description = "Python SDK for managing Tarko Agent UI Builder static assets"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Tarko Team", email = "team@tarko.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/agent-infra/tarko-agent-ui-fastapi-example"
Repository = "https://github.com/agent-infra/tarko-agent-ui-fastapi-example"





[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
]
