[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarko-agent-ui"
version = "0.3.0b11"
description = "Python SDK for managing Tarko Agent UI Builder static assets"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "ULIVZ", email = "chenhaoli@bytedance.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Django",
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.33.0",
]

[project.urls]
Homepage = "https://github.com/agent-infra/tarko-agent-ui-python"
Repository = "https://github.com/agent-infra/tarko-agent-ui-python"
"Bug Tracker" = "https://github.com/agent-infra/tarko-agent-ui-python/issues"
Documentation = "https://github.com/agent-infra/tarko-agent-ui-python#readme"
Changelog = "https://github.com/agent-infra/tarko-agent-ui-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tarko_agent_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "/tarko_agent_ui",
    "/scripts",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/py.typed",
    "/pyproject.toml",
    "/MANIFEST.in",
]

[tool.hatch.build.targets.wheel.force-include]
"py.typed" = "tarko_agent_ui/py.typed"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=tarko_agent_ui",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m 'not slow')",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["tarko_agent_ui"]
omit = [
    "tests/*",
    "examples/*",
    "scripts/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | build
    | dist
    | tarko_agent_ui/static
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["tarko_agent_ui/static/*", "test_env/*", ".venv/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
